# sql_server_copy_tables

./: .envrc  README.md  mssql_copy_table.py  mssql_execute_sql.py  pyproject.toml  requirements.txt
